Native build for Mill projects: zinc build → native-image with full classpath
Mill native build:
- Extracts runClasspath from Mill for dependency jars
- Reads mainClass from build.mill.yaml
- Calls native-image with full classpath (classes + deps)
- zinc-flow: 23MB native binary built successfully

Note: Javalin/Jetty needs GraalVM reflection config for native runtime.
The Zinc compiler chain works — the framework dependency needs native support.
zinc-flow runs on JVM via `zinc run`, native build needs framework config.

232 tests, 14 e2e, all passing.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>